# optyx

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  docs.yml  publish.yml
benchmarks/: README.md  __init__.py  conftest.py  run_benchmarks.py  sparse_benchmark.py  utils.py
docs/: _quarto.yml  benchmarks.qmd  contributing.qmd  index.qmd  quarto-python-wrapper  styles.css  whats-new.qmd
examples/: constraints_and_solvers.py  expressions_and_autodiff.py  fleet_dispatch.py  lp_export.py  mine_equipment_milp.py  mine_production_planning.py  mine_scheduling.py  modify_and_resolve.py  portfolio_optimization.py  resource_allocation.py  road_maintenance.py  solver_callbacks.py
tests/: test_analysis.py  test_autodiff.py  test_autodiff_iterative.py  test_compiler.py  test_constraints.py  test_depth_estimation.py  test_errors.py  test_expressions.py  test_hessian_optimization.py  test_incremental_modification.py  test_lp_export.py  test_lp_solver.py  test_matrices.py  test_matrix_arithmetic.py  test_matrix_constraints.py  test_matrix_parameter.py  test_milp_solver.py  test_modeling_syntax.py  test_nary_expressions.py  test_parameters.py  test_pattern_matching.py  test_problem.py  test_solution_enhancements.py  test_solver_callbacks.py  test_solver_integration.py  test_solvers.py  test_sparse_compilation.py  test_sparse_trust_constr.py  test_sparsity_analysis.py  test_variable_dict.py  test_vector_binary_op.py  test_vector_gradients.py  test_vector_matrix_polish.py  test_vectors.py
(+121 files in other folders)
